# Slint-UI-Tutorial-Income-app

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
