[package]
name = "income-app"
version = "0.1.0"
authors = ["omarhboubati <omarhbo23@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A simple income divider app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.circlepulse.Slint-UI-Tutorial-Income-app"
icon = ["./icon.png", "./icon@2x.png"]